código base funcionando, ajustes e novas funções a serem feitas

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bateria</title>
+    <link rel="icon" href="data:,">
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -25,10 +26,10 @@
     </div>
     <div class="composer">
         <input type="text" id="input" placeholder="Faça uma composição..." />
-        <button>Tocar</button>
+        <button onclick="">Tocar</button>
     </div>
 
-    <footer>Criado pela B7Web</footer>
+    <footer>Criado por Matheus Pietrobon</footer>
 
     <audio id="s_keyq" src="sounds/keyq.wav"></audio>
     <audio id="s_keyw" src="sounds/keyw.wav"></audio>
