--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <button onclick="">Tocar</button>
     </div>
 
-    <footer>Criado por Matheus Pietrobon</footer>
+    <footer>Create by Matheus Pietrobon</footer>
 
     <audio id="s_keyq" src="sounds/keyq.wav"></audio>
     <audio id="s_keyw" src="sounds/keyw.wav"></audio>
